--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -32,7 +32,7 @@
     {
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable({
+            var table=$("#customers").DataTable({
                 ajax: {
                     url: "/api/customers/",
                     dataSrc: ""
@@ -68,7 +68,8 @@
                             url: "/api/customers/" + button.attr("data-customer-id"),
                             method: "DELETE",
                             success: function () {
-                                button.parents("tr").remove();
+                                table.row(button.parents("tr")).remove().draw();
+                                
                             }
                         });
                     }
